--- a/part2_dvc/params.yaml
+++ b/part2_dvc/params.yaml
@@ -2,8 +2,8 @@ index_col: 'id'
 target_col: 'price'
 one_hot_drop: 'if_binary'
 n_estimators: 100
-max_depth: 10
+max_depth: 15
 criterion: 'squared_error'
 n_splits: 5
 n_jobs: -1
-metrics: ['neg_mean_absolute_error', 'neg_mean_squared_error', 'r2']
+metrics: ['neg_mean_absolute_error', 'neg_mean_squared_error', 'neg_mean_absolute_percentage_error', 'r2']
